# dateflix-api

./: .coveragerc  .env.template  .env_template  .gitignore  .pre-commit-config.yaml  .secrets.yaml.template  .secrets_template.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.yaml  setup.cfg
dateflix_api/: Procfile  asgi.py  settings.py  urls.py  wsgi.py
dateflix_api/admin/: __init__.py  movie.py  picture.py  profile_like.py  user.py
dateflix_api/app/admin/: __init__.py  movie.py  picture.py  profile_like.py  user.py
dateflix_api/app/managers/: user.py
dateflix_api/app/migrations/: 0001_initial.py  0002_auto_20200706_0931.py  0002_auto_20200707_0949.py  0003_auto_20200708_0857.py  0004_auto_20200709_0859.py  0005_profilelike.py  0006_user_instagram.py  0007_auto_20200710_0956.py  0008_auto_20200716_0859.py  0009_movie_netflix_id.py  0010_auto_20200721_0910.py  0011_movie_netflix_id.py  0012_auto_20200721_0940.py  0013_movie_tmdb_score.py  (+4 more)
dateflix_api/apps/: __init__.py
dateflix_api/migrations/: 0001_initial.py
dateflix_api/models/: __init__.py  profile_like.py  user.py
dateflix_api/serializers/: __init__.py  like.py  match.py  movie.py  profile.py  profile_like.py  token.py  user.py
dateflix_api/services/: instagram.py
dateflix_api/views/: __init__.py  group.py  like.py  match.py  me.py  movie.py  playlist.py  profile.py  profile_like.py  token.py  user.py
fixtures/development/: movies.json  users.json
tests/: test_dateflix_api.py
(+31 files in other folders)
